# cloud-shell

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md
.devcontainer/: devcontainer.json
.github/workflows/: docker.yml  lint.yml
manifests/: deployment.yml  rbac.yml  service-accounts.yml  service.yml
src/: main.rs  types.rs
src/manager/: k8s.rs
tests/: basic.py  basic.ts
