[package]
name = "cloud-shell"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
axum = { version = "0.7.5", features = ["ws"] }
dotenvy = "0.15.7"
futures-util = "0.3.30"
k8s-openapi = { version = "0.21.1", features = ["latest"] }
kube = { version = "0.90.0", features = ["ws"] }
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.119"
tokio = { version = "1.37.0", features = ["full"] }
tokio-util = "0.7.11"
tracing = { version = "0.1.40", features = ["log"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "time", "local-time"] }
uuid = { version = "1.8.0", features = ["v4"] }
